force-app/main/default/objects/MD_Order__c/MD_Order__c.object-meta.xml
<CustomObject>
    <label>Customer Order</label>
    <nameField>
        <displayFormat>CON-{000000000}</displayFormat>
        <label>Customer Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>