force-app/main/default/objects/MD_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.BusinessOpportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.BusinessOpportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Orders</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>