force-app/main/default/objects/MD_Order__c/fields/Address_Line_1_Ship_to__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1_Ship_to__c</fullName>
    <formula>AccountId__r.AddressLine_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 1 (Ship to)</label>
    <type>Text</type>
</CustomField>