force-app/main/default/objects/MD_Order__c/fields/BusinessOpportunity__c.field-meta.xml
<CustomField>
    <fullName>BusinessOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Opportunity</label>
    <referenceTo>MD_Opportunity__c</referenceTo>
    <relationshipLabel>Customer Orders</relationshipLabel>
    <relationshipName>CustomerOrders</relationshipName>
    <type>Lookup</type>
</CustomField>