force-app/main/default/objects/MD_Order__c/fields/City_Bill_to__c.field-meta.xml
<CustomField>
    <fullName>City_Bill_to__c</fullName>
    <formula>Account__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City (Bill to)</label>
    <type>Text</type>
</CustomField>