force-app/main/default/objects/MD_Order__c/fields/City_Ship_to__c.field-meta.xml
<CustomField>
    <fullName>City_Ship_to__c</fullName>
    <formula>AccountId__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City (Ship to)</label>
    <type>Text</type>
</CustomField>