force-app/main/default/objects/MD_Order__c/fields/Customer_Code_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code_Bill_To__c</fullName>
    <formula>Account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Code (Bill To)</label>
    <type>Text</type>
</CustomField>