force-app/main/default/objects/MD_Order__c/fields/Customer_Code_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code_Ship_To__c</fullName>
    <formula>AccountId__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Code (Ship To)</label>
    <type>Text</type>
</CustomField>