force-app/main/default/objects/MD_Order__c/fields/Customer_Demand__c.field-meta.xml
<CustomField>
    <fullName>Customer_Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Demand</label>
    <referenceTo>Customer_Demand__c</referenceTo>
    <relationshipName>Customer_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>