force-app/main/default/objects/MD_Order__c/fields/Customer_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Date__c</fullName>
    <label>Customer Reference Date</label>
    <type>Date</type>
</CustomField>