force-app/main/default/objects/MD_Order__c/fields/CustomerAuthorizedById__c.field-meta.xml
<CustomField>
    <fullName>CustomerAuthorizedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Authorized By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>