force-app/main/default/objects/MD_Order__c/fields/CustomerAuthorizedDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerAuthorizedDate__c</fullName>
    <label>Customer Authorized Date</label>
    <type>Date</type>
</CustomField>