force-app/main/default/objects/MD_Order__c/fields/Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enterprise Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Enterprise_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Orders (Enterprise Account)</relationshipLabel>
    <relationshipName>Customer_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>