force-app/main/default/objects/MD_Order__c/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Partially Fulfilled</fullName>
            </value>
            <value>
                <fullName>Canelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>