force-app/main/default/objects/MD_Order__c/fields/Is__c.field-meta.xml
<CustomField>
    <fullName>Is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>