force-app/main/default/objects/MD_Order__c/fields/Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Status__c</fullName>
    <label>Line Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Backordered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>