force-app/main/default/objects/MD_Order__c/fields/Notification_to_CE_Managers__c.field-meta.xml
<CustomField>
    <fullName>Notification_to_CE_Managers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification to CE Managers</label>
    <type>Checkbox</type>
</CustomField>