force-app/main/default/objects/MD_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YSMP - FOC Order</fullName>
            </value>
            <value>
                <fullName>YKB - Demo Release Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>