force-app/main/default/objects/MD_Order__c/fields/OrderReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderReferenceNumber__c</fullName>
    <label>Order Reference Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>