force-app/main/default/objects/MD_Order__c/fields/OriginalOrderId__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order</label>
    <referenceTo>MD_Order__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>