force-app/main/default/objects/MD_Order__c/fields/Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Division__c</fullName>
    <formula>TEXT(Owner:User.Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Division</label>
    <type>Text</type>
</CustomField>