force-app/main/default/objects/MD_Order__c/fields/PODate__c.field-meta.xml
<CustomField>
    <fullName>PODate__c</fullName>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>