force-app/main/default/objects/MD_Order__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>MD_Case__c</referenceTo>
    <relationshipLabel>Customer Orders</relationshipLabel>
    <relationshipName>Customer_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>