force-app/main/default/objects/MD_Order__c/fields/ShipToContactId__c.field-meta.xml
<CustomField>
    <fullName>ShipToContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Orders</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>