force-app/main/default/objects/MD_Order__c/fields/Sum_of_Actual_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Actual_Unit_Cost__c</fullName>
    <label>Sum of Actual Unit Cost</label>
    <summarizedField>MD_OrderItem__c.Actual_Unit_Cost__c</summarizedField>
    <summaryForeignKey>MD_OrderItem__c.OrderId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>