force-app/main/default/objects/MD_Order__c/recordTypes/Demo_Issuance.recordType-meta.xml
<RecordType>
    <fullName>Demo_Issuance</fullName>
    <active>true</active>
    <label>Demo Issuance</label>
</RecordType>