force-app/main/default/objects/MD_Order__c/recordTypes/FOC_Chemicals.recordType-meta.xml
<RecordType>
    <fullName>FOC_Chemicals</fullName>
    <active>true</active>
    <label>FOC Chemicals</label>
</RecordType>