force-app/main/default/objects/MD_Order__c/recordTypes/FOC_Diagnostics.recordType-meta.xml
<RecordType>
    <fullName>FOC_Diagnostics</fullName>
    <active>true</active>
    <label>FOC Diagnostics</label>
</RecordType>