force-app/main/default/objects/MD_Order__c/listViews/CE_Manager1_MD_Order.listView-meta.xml
<ListView>
    <fullName>CE_Manager1_MD_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>CE Manager of Diagno For Notification</label>
    <queue>CE_Manager1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>